<resources>
    <string name="app_name">Rock Paper Scissors</string>

    <!--  Instructions  -->
    <string name="tvWelcome">Welcome</string>
    <string name="tvInstructions">Choose rock, paper or scissors. Defeat your phone!</string>

    <!--  Statistics  -->
    <string name="tvStatsText">Your all time statistics:</string>
    <string name="tvStats">Win: %1$d Lose: %2$d Draw: %3$d</string>
    <string name="tvResult">You %s!</string>
    <string name="tvVersus">V.S</string>

    <!--  Game states  -->
    <string name="userWon">You won!</string>
    <string name="userLost">You lost!</string>
    <string name="draw">The game was a draw…</string>

    <!--  Current moves  -->
    <string name="tvComputerMove">Computer</string>
    <string name="tvUserMove">You</string>

    <!--  Menus  -->
    <string name="action_history">Game history</string>
    <string name="action_delete_history">Delete game history</string>

    <!--  Cardviews  -->
    <string name="cvtvResult">Winner: %s</string>
    <string name="cvtvDate">DATE</string>

    <!--  Toasts  -->
    <string name="tstWinner">The winner was: %1$s!</string>
    <string name="tstDraw">The game was a draw!</string>

</resources>
