<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="212dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cvtvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cvtvResult"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cvtvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cvtvDate"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cvtvResult" />

        <ImageView
            android:id="@+id/cvivComputerMove"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/box"
            card_view:layout_constraintEnd_toStartOf="@+id/textView4"
            card_view:layout_constraintTop_toBottomOf="@+id/cvtvDate"
            card_view:srcCompat="@drawable/rock" />

        <ImageView
            android:id="@+id/cvivUserMove"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/box"
            card_view:layout_constraintStart_toEndOf="@+id/textView4"
            card_view:layout_constraintTop_toBottomOf="@+id/cvtvDate"
            card_view:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/tvVersus"
            android:textSize="24dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cvtvDate" />

        <TextView
            android:id="@+id/cvtvComputerMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvComputerMove"
            card_view:layout_constraintEnd_toEndOf="@+id/cvivComputerMove"
            card_view:layout_constraintStart_toStartOf="@+id/cvivComputerMove"
            card_view:layout_constraintTop_toBottomOf="@+id/cvivComputerMove" />

        <TextView
            android:id="@+id/cvtvUserMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvUserMove"
            card_view:layout_constraintEnd_toEndOf="@+id/cvivUserMove"
            card_view:layout_constraintStart_toStartOf="@+id/cvivUserMove"
            card_view:layout_constraintTop_toBottomOf="@+id/cvivUserMove" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
